@@ -123,9 +123,7 @@ static void hash_remove_func (gpointer key, gpointer value, gpointer user_data);
 
 static void get_tags_func (GtkTextTag *tag, gpointer data);
 
-static gboolean read_loop (GIOChannel  *io,
-			   GIOCondition cond,
-			   gpointer     data);
+static gboolean read_loop (GtkTextBuffer *buffer, gchar *filename, GIOChannel  *io, GError **error);
 
 
 static void
@@ -750,36 +748,62 @@ get_syntax_end (const gchar          *text,
 }
 
 static gboolean
-read_loop (GIOChannel  *io,
-	   GIOCondition cond,
-	   gpointer     data)
+read_loop (GtkTextBuffer *buffer, 
+	char *filename,
+	  GIOChannel  *io,
+	   GError **error)
 {
-	GtkSourceBuffer *buffer = GTK_SOURCE_BUFFER (data); 
+	GIOStatus status;
+	GtkWidget *widget;
+	GtkTextIter end;
 	gchar *str = NULL;
 	gint size = 0;
-	GError *error = NULL;
-	GtkTextIter end;
+	*error = NULL;
 
-	if (cond == G_IO_IN)  {
-		gtk_text_buffer_get_end_iter (GTK_TEXT_BUFFER (buffer),
+	g_print("readloop\n");
+	gtk_text_buffer_get_end_iter (GTK_TEXT_BUFFER (buffer),
 					      &end);
-		if (g_io_channel_read_line (io, &str, &size, NULL, &error) == G_IO_STATUS_NORMAL && size)  {
-			gtk_text_buffer_insert (GTK_TEXT_BUFFER (buffer),
+	if ((status=g_io_channel_read_line (io, &str, &size, NULL, error)) == G_IO_STATUS_NORMAL && size)  {
+		#ifdef DEBUG_SOURCEVIEW
+		puts(str);
+		#endif
+		gtk_text_buffer_insert (GTK_TEXT_BUFFER (buffer),
 						&end, str, size);
-			g_free(str);
-			return TRUE;
-		} else {
-			if (error)
-				g_error_free (error);
-
-			error = NULL;
-			g_io_channel_read_to_end (io, &str, &size, &error);
-			gtk_text_buffer_insert (GTK_TEXT_BUFFER (buffer),
-						&end, str, size);
-			g_free(str);
-			return FALSE;
-		}
+		g_free(str);
+		return TRUE;
 	}
+	else if(!*error && (status=g_io_channel_read_to_end (io, &str, &size, error)) == G_IO_STATUS_NORMAL && size)	
+	{
+		#ifdef DEBUG_SOURCEVIEW
+		puts(str);
+		#endif
+		gtk_text_buffer_insert (GTK_TEXT_BUFFER (buffer),
+					&end, str, size);
+		g_free(str);
+
+		return TRUE;
+	}
+
+	g_print ("%d %d %d\n", G_IO_STATUS_ERROR, G_IO_STATUS_NORMAL, G_IO_STATUS_EOF);
+	g_print("GIOstatus %d  error %s\n", status, *error ? (*error)->message : "NO ERROR");	
+	if (status == G_IO_STATUS_EOF && !*error)
+		return FALSE;
+
+	if (!*error)
+		return FALSE;
+
+	widget = gtk_message_dialog_new (NULL,
+					 (GtkDialogFlags) 0,
+					 GTK_MESSAGE_ERROR,
+					 GTK_BUTTONS_OK,
+					 "%s\nFile %s",
+					 (*error)->message,
+					 filename);
+	gtk_dialog_run (GTK_DIALOG (widget));
+	gtk_widget_destroy (widget);
+
+		/* because of error in input we clear already loaded text */
+	gtk_text_buffer_set_text(buffer, "", 0);
 
 	return FALSE;
 }
@@ -1339,8 +1363,8 @@ gtk_source_buffer_redo (GtkSourceBuffer *buffer)
 int
 gtk_source_buffer_get_undo_levels (GtkSourceBuffer *buffer)
 {
-	g_return_if_fail (GTK_IS_SOURCE_BUFFER (buffer));
-	g_return_if_fail (buffer->priv != NULL);
+	g_return_val_if_fail (GTK_IS_SOURCE_BUFFER (buffer), 0);
+	g_return_val_if_fail (buffer->priv != NULL, 0);
 
 	return gtk_undo_manager_get_undo_levels (buffer->priv->undo_manager);
 }
@@ -1612,7 +1636,8 @@ gtk_source_buffer_set_highlight (GtkSourceBuffer *buffer,
 
 gboolean
 gtk_source_buffer_load (GtkSourceBuffer *buffer,
-			const gchar     *filename)
+			const gchar     *filename, 
+			GError **error)
 {
 	g_return_val_if_fail (buffer != NULL, FALSE);
 	g_return_val_if_fail (filename != NULL, FALSE);
@@ -1620,12 +1645,14 @@ gtk_source_buffer_load (GtkSourceBuffer *buffer,
 
 	return gtk_source_buffer_load_with_character_encoding (buffer,
 							       filename,
-							       "UTF-8");  
+							       NULL, 
+								error);  
 }
 
 gboolean
 gtk_source_buffer_save (GtkSourceBuffer *buffer,
-			const gchar     *filename)
+			const gchar     *filename,
+			GError **error)
 {
 	g_return_val_if_fail (buffer != NULL, FALSE);
 	g_return_val_if_fail (filename != NULL, FALSE);
@@ -1633,18 +1660,20 @@ gtk_source_buffer_save (GtkSourceBuffer *buffer,
 
 	return gtk_source_buffer_save_with_character_encoding (buffer,
 							       filename,
-							       "UTF-8");  
+							       "UTF-8", 
+								error);  
 }
 
 gboolean
 gtk_source_buffer_load_with_character_encoding (GtkSourceBuffer *buffer,
 						const gchar     *filename,
-						const gchar     *encoding)
+						const gchar     *encoding,
+						GError **error)
 {
-	GError *error = NULL;
 	GIOChannel *io;
 	GtkWidget *widget;
 	gboolean highlight = FALSE;
+	*error = NULL;
 
 	g_return_val_if_fail (buffer != NULL, FALSE);
 	g_return_val_if_fail (filename != NULL, FALSE);
@@ -1652,14 +1681,14 @@ gtk_source_buffer_load_with_character_encoding (GtkSourceBuffer *buffer,
 
 	highlight = gtk_source_buffer_get_highlight (buffer);
 
-	io = g_io_channel_new_file (filename, "r", &error);
+	io = g_io_channel_new_file (filename, "r", error);
 	if (!io) {
 		widget = gtk_message_dialog_new (NULL,
 						 (GtkDialogFlags) 0,
 						 GTK_MESSAGE_ERROR,
 						 GTK_BUTTONS_OK,
 						 "%s\nFile %s",
-						 error->message,
+						 (*error)->message,
 						 filename);
 		gtk_dialog_run (GTK_DIALOG (widget));
 		gtk_widget_destroy (widget);
@@ -1667,18 +1696,17 @@ gtk_source_buffer_load_with_character_encoding (GtkSourceBuffer *buffer,
 		return FALSE;
 	}
 
-	if (g_io_channel_set_encoding (io, encoding, &error) != G_IO_STATUS_NORMAL)  {
+	if (g_io_channel_set_encoding (io, encoding, error) != G_IO_STATUS_NORMAL)  {
 		widget = gtk_message_dialog_new (NULL,
 						 (GtkDialogFlags) 0,
 						 GTK_MESSAGE_ERROR,
 						 GTK_BUTTONS_OK,
 						 _("Failed to set encoding:\n%s\n%s"),
 						 filename,
-						 error->message);
+						 (*error)->message);
 
 		gtk_dialog_run (GTK_DIALOG (widget));
 		gtk_widget_destroy (widget);
-		g_error_free (error);
 		g_io_channel_unref (io);
 
 		return FALSE;
@@ -1689,12 +1717,14 @@ gtk_source_buffer_load_with_character_encoding (GtkSourceBuffer *buffer,
 
 	gtk_source_buffer_begin_not_undoable_action (buffer);
 
-	while (read_loop (io, G_IO_IN, buffer));
-	/* g_io_add_watch (io, G_IO_IN | G_IO_ERR, read_loop, buffer);*/
+	while (!*error && read_loop (GTK_TEXT_BUFFER(buffer), filename, io, error) );	
 
 	gtk_source_buffer_end_not_undoable_action (buffer);
 
 	g_io_channel_unref (io);
+	
+	if (*error)
+		return FALSE;
 
 	gtk_text_buffer_set_modified (GTK_TEXT_BUFFER (buffer), FALSE);
 
@@ -1707,20 +1737,25 @@ gtk_source_buffer_load_with_character_encoding (GtkSourceBuffer *buffer,
 gboolean
 gtk_source_buffer_save_with_character_encoding (GtkSourceBuffer *buffer,
 						const gchar     *filename,
-						const gchar     *encoding)
+						const gchar     *encoding,
+						GError	**error)
 {
 	GIOChannel *io;
 	GtkTextIter iter, iterend;
-	GError *error=NULL;
-	gsize length=0;
 	gchar *buf;
 	gboolean more = FALSE;
+	gsize length=0;
+	*error=NULL;
+
 
 	g_return_val_if_fail (buffer != NULL, FALSE);
 	g_return_val_if_fail (filename != NULL, FALSE);
 	g_return_val_if_fail (GTK_IS_SOURCE_BUFFER (buffer), FALSE);
 
-	io=g_io_channel_new_file(filename, "w+", &error);
+      if (encoding && !*encoding)
+        encoding = NULL;
+
+	io=g_io_channel_new_file(filename, "w+", error);
 	if (!io)  {
 		GtkWidget *w = gtk_message_dialog_new (NULL,
 						       (GtkDialogFlags) 0,
@@ -1728,27 +1763,25 @@ gtk_source_buffer_save_with_character_encoding (GtkSourceBuffer *buffer,
 						       GTK_BUTTONS_OK,
 						       _("Failed to create file:\n%s\n%s"),
 						       filename,
-						       error->message);
+						       (*error)->message);
 
 		gtk_dialog_run (GTK_DIALOG(w));
 		gtk_widget_destroy (w);
-		g_error_free (error);
 
 		return FALSE;
 	}
 
-	if (g_io_channel_set_encoding (io, encoding, &error) != G_IO_STATUS_NORMAL)  {
+	if (encoding && g_io_channel_set_encoding (io, encoding , error) != G_IO_STATUS_NORMAL)  {
 		GtkWidget *w = gtk_message_dialog_new (NULL,
 						       (GtkDialogFlags) 0,
 						       GTK_MESSAGE_ERROR,
 						       GTK_BUTTONS_OK,
 						       _("Failed to set encoding:\n%s\n%s"),
 						       filename,
-						       error->message);
+						       (*error)->message);
 
 		gtk_dialog_run (GTK_DIALOG(w));
 		gtk_widget_destroy (w);
-		g_error_free (error);
 		g_io_channel_unref (io);
 
 		return FALSE;
@@ -1759,18 +1792,17 @@ gtk_source_buffer_save_with_character_encoding (GtkSourceBuffer *buffer,
 	do {
 		more = gtk_text_iter_forward_line(&iterend);
 		buf = gtk_text_iter_get_text(&iter, &iterend);
-		if (g_io_channel_write_chars(io, buf, -1, &length, &error) != G_IO_STATUS_NORMAL) {
+		if (g_io_channel_write_chars(io, buf, -1, &length, error) != G_IO_STATUS_NORMAL) {
 			GtkWidget *w = gtk_message_dialog_new (NULL,
 							       (GtkDialogFlags) 0,
 							       GTK_MESSAGE_ERROR,
 							       GTK_BUTTONS_OK,
 							       _("Failed to write characters to file:\n%s\n%s"),
 							       filename,
-							       error->message);
+							       (*error)->message);
 
 			gtk_dialog_run (GTK_DIALOG (w));
 			gtk_widget_destroy (w);
-			g_error_free (error);
 			g_io_channel_unref (io);
 
 			return FALSE;
@@ -1780,18 +1812,17 @@ gtk_source_buffer_save_with_character_encoding (GtkSourceBuffer *buffer,
 		iter = iterend;
 	} while (more);
 
-	if (g_io_channel_flush(io, &error) != G_IO_STATUS_NORMAL) {
+	if (g_io_channel_flush(io, error) != G_IO_STATUS_NORMAL) {
 		GtkWidget *w = gtk_message_dialog_new (NULL,
 						       (GtkDialogFlags) 0,
 						       GTK_MESSAGE_ERROR,
 						       GTK_BUTTONS_OK,
 						       _("Failed to write end line to file:\n%s\n%s"),
 						       filename,
-						       error->message);
+						       (*error)->message);
 
 		gtk_dialog_run (GTK_DIALOG (w));
 		gtk_widget_destroy (w);
-		g_error_free (error);
 		g_io_channel_unref (io);
 
 		return FALSE;
